# 8518_DRV

./: .clangd  .gitignore  .mxproject  8518_DRV.ioc  CMakeLists.txt  Taskfile.yml  debug0.jdebug  flash.jlink
.cache/clangd/index/: adc.c.6EB7E8F300DA3B35.idx  adc.h.A5FB8B7F33452A08.idx  cmsis_compiler.h.142195AFFB06793E.idx  cmsis_gcc.h.A119AFCBF8BD93AE.idx  cmsis_version.h.8116ED12577F6498.idx  core_cm4.h.BCBD57CE76A57DB1.idx  dac.c.B802E74423CA1A45.idx  dac.h.E63409165771DF98.idx  fdcan.c.33F98D49DAC9E74F.idx  fdcan.h.C072FB6598CF7008.idx  gpio.c.20C5C6A1C628CAEB.idx  gpio.h.42E99608F1B3FC48.idx  main.c.D092D375E47B59C7.idx  main.h.B561D6607D898AA2.idx  mpu_armv7.h.201570B5450B8BC9.idx  spi.c.9300A7ECAB6252E2.idx  spi.h.B9F233156D18C1C4.idx  startup_stm32g431xx.s.B0C270CE9D17EEE2.idx  stm32_hal_legacy.h.C1B7E5E110EA6115.idx  stm32g431xx.h.0B9D6105D12928B5.idx  stm32g4xx.h.2B3D8B714F20C080.idx  stm32g4xx_hal.c.430C3E8CAD166310.idx  stm32g4xx_hal.h.062E4A04C4E61FD6.idx  stm32g4xx_hal_adc.c.44793D0CADAF3E4E.idx  stm32g4xx_hal_adc.h.E83E2C009ADB1881.idx  stm32g4xx_hal_adc_ex.c.87AC20D9AEFEF332.idx  stm32g4xx_hal_adc_ex.h.34867D42DBF035A6.idx  stm32g4xx_hal_conf.h.AB403856687CE8E1.idx  stm32g4xx_hal_cortex.c.5ED9D8E0571292E5.idx  stm32g4xx_hal_cortex.h.923BC57656F707C9.idx  stm32g4xx_hal_dac.c.DC7DFDCF7804A2BB.idx  stm32g4xx_hal_dac.h.29BDA5E98CF5CA4E.idx  stm32g4xx_hal_dac_ex.c.0C723DBE15EA3B5C.idx  stm32g4xx_hal_dac_ex.h.585BB164CCED0DC4.idx  stm32g4xx_hal_def.h.184A74CF897F7F4D.idx  stm32g4xx_hal_dma.c.0EE740D56C437D82.idx  stm32g4xx_hal_dma.h.AD7030B678C32A30.idx  stm32g4xx_hal_dma_ex.c.DE651611874C7148.idx  stm32g4xx_hal_dma_ex.h.2ECD0C5B160D58E8.idx  stm32g4xx_hal_exti.c.B5CE4FBB7F87A272.idx  (+45 more)
Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: adc.c  fdcan.c  gpio.c  main.c  spi.c  stm32g4xx_it.c  tim.c  usart.c
User/BSP/Inc/: bsp_adc.h  bsp_can.h  bsp_kth7823.h  bsp_led.h  bsp_pwm.h
User/BSP/Src/: bsp_adc.c  bsp_can.c  bsp_kth7823.c  bsp_led.c  bsp_pwm.c
User/FOC/: motor_config.h
User/FOC/Inc/: analog_signal.h  foc_controller.h  foc_core.h  foc_openloop.h  foc_pid.h  mean_filter.h
User/FOC/Src/: foc_core.c  (+4 more)
cmake/stm32cubemx/: CMakeLists.txt
